DockerIngress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: console-products
  labels:
    run: console-products
spec:
  replicas: 2
  selector:
    matchLabels:
      run: console-products
  template:
    metadata:
      labels:
        run: console-products
    spec:
      containers:
      - image: registry.cn-shenzhen.aliyuncs.com/salex/console-products:2023-06-21-15-08-13
        name: console-products # 容器名称
        ports:
        - containerPort: 80
          protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: console-products
spec:
  ports:
  - port: 80 #服务端口
    protocol: TCP
    targetPort: 80 #应用端口
  selector:
    run: console-products
  sessionAffinity: None
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: console-products-ingress
spec:
  rules:
  - host: console.tuohaixingpan.com
    http:
      paths:
      # 老版本服务。
      - path: /products
        backend:
          service: 
            name: console-products
            port:
              number: 80
        pathType: Prefix
